--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@mapbox/mapbox-gl-draw": "^1.0.9",
     "core-js": "^2.5.4",
+    "mapbox-gl": "^0.27.0",
+    "mapbox-gl-draw": "^0.16.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
