--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "core-js": "^2.5.4",
     "mapbox-gl": "^0.27.0",
     "mapbox-gl-draw": "^0.16.0",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
